--- a/index.html
+++ b/index.html
@@ -40,20 +40,28 @@
   </div>
 
   <div class="section1">
-    Transform your brand
+    <div class="text">
+      <h1>Transform your brand</h1>
 
-    We are a full-service creative agency specializing in helping brands grow fast. 
-    Engage your clients through compelling visuals that do most of the marketing for you.
+      <p>We are a full-service creative agency specializing in helping brands grow fast. 
+      Engage your clients through compelling visuals that do most of the marketing for you.</p>
 
-    Learn more
+      <button>Learn more</button>
+    </div>
+
+    <img src="images/desktop/image-transform.jpg" alt="egg image">
   </div>
 
   <div class="section2">
-    Stand out to the right audience
 
-    Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+    <img src="images/desktop/image-stand-out.jpg" alt="pink cup">
+    <div class="text">
+      <h1>Stand out to the right audience</h1>
 
-    Learn more
+      <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
+
+      <button>Learn more</button>
+    </div>
   </div>
 
   <div class="section3">
@@ -70,36 +78,59 @@
   </div>
 
   <div class="clientSection">
-    Client testimonials
+    <h2>Client testimonials</h2>
 
-    <div class="client1">
-      We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-      Emily R.
-      Marketing Director
-    </div>
+    <div class="clients">
 
-    <div class="client2">
-      Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-      Thomas S.
-      Chief Operating Officer
-    </div>
+      <div class="client1">
 
-    <div class="client3">
-      Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-      Jennie F.
-      Business Owner
+        <img src="images/image-emily.jpg" alt="">
+
+        <div class="clientTxt">
+          <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+          <h3>Emily R.</h3>
+          <p>Marketing Director</p>
+        </div>
+
+      </div>
+
+      <div class="client2">
+
+        <img src="images/image-thomas.jpg" alt="">
+
+        <div class="clientTxt">
+          <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+          <h3>Thomas S.</h3>
+          <p>Chief Operating Officer</p>
+        </div>
+
+      </div>
+
+      <div class="client3">
+
+        <img src="images/image-jennie.jpg" alt="">
+
+        <div class="clientTxt">
+          <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <h3>Jennie F.</h3>
+          <p>Business Owner</p>
+        </div>
+
+      </div>
+
     </div>
 
   </div>
 
   <div class="imgSection">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="images/desktop/image-gallery-milkbottles.jpg" alt="">
+    <img src="images/desktop/image-gallery-orange.jpg" alt="">
+    <img src="images/desktop/image-gallery-cone.jpg" alt="">
+    <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="">
   </div>
 
   <footer>
+    
     About
     Services
     Projects
